fix: .toList()로 불변 리스트 생성 후 정렬 시도하던 것 수정 #159